tests/ui/compile-fail/pin_data/missing_comma.rs
use pinned_init::*;

#[pin_data]
struct Foo {
    a: Box<Foo>
    b: Box<Foo>
}
